--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,18 @@
-// Начните писать стили здесь
+@import "./blocks/additional.less";
+@import "./blocks/advantages.less";
+@import "./blocks/card.less";
+@import "./blocks/catalog.less";
+@import "./blocks/contacts.less";
+@import "./blocks/copyright.less";
+@import "./blocks/example.less";
+@import "./blocks/form.less";
+@import "./blocks/main-container.less";
+@import "./blocks/main-footer.less";
+@import "./blocks/main-header.less";
+@import "./blocks/page.less";
+@import "./blocks/programs.less";
+@import "./blocks/promo.less";
+@import "./blocks/selection.less";
+@import "./blocks/social.less";
+@import "./blocks/fonts.less";
+@import "./blocks/card-more.less";
