--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -6,8 +6,25 @@
   font-size: 14px;
   line-height: 18px;
   font-family: "Lato", sans-serif;
-  width: 320px;
   margin: 0 auto;
   background-color: #ffffff;
   color: #000000;
+}
+
+.button {
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  box-sizing: border-box;
+  border: none;
+  text-decoration: none;
+}
+
+.button--primary {
+  background-color: #68b738;
+  color: #ffffff;
+}
+
+.visually-hidden {
+  position: fixed;
+  transform: scale(0);
 }
