--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,8 +1,37 @@
 .main-header {
+  display: flex;
+  flex-direction: column;
   font-family: "Oswald", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
   text-transform: uppercase;
   color: #000000;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+  }
+}
+
+.main-header__logo {
+  display: flex;
+  flex-direction: row;
+  height: 38px;
+
+  @media (min-width: @tablet-width) {
+    height: 52px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 59px;
+  }
+}
+
+.main-nav__list {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+  }
 }
