--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,3 +16,4 @@
 @import "./blocks/social.less";
 @import "./blocks/fonts.less";
 @import "./blocks/card-more.less";
+@import "./blocks/variables.less";
