--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -35,3 +35,12 @@
     flex-direction: row;
   }
 }
+
+.site-list__link {
+  text-decoration: none;
+  color: #000000;
+
+  /*@media (min-width: @desktop-width) {
+    color: #ffffff;
+  }*/
+}
