--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -14,3 +14,19 @@
   line-height: 18px;
   color: #444444;
 }
+
+.advantages__list {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
