--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -5,3 +5,17 @@
   font-size: 36px;
   line-height: 36px;
 }
+
+.catalog__wrapper {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
