--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -45,3 +45,21 @@
   text-align: center;
   text-transform: uppercase;
 }
+
+.example__list {
+  display: flex;
+  flex-direction: row;
+}
+
+.example__container {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+  }
+
+  @media (min-width: @desktop-width) {
+    flex-direction: column;
+  }
+}
