--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -1,3 +1,9 @@
 .main-footer__wrapper {
-  background-color: #F2F2F2;;
+  background-color: #F2F2F2;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+  }
 }
