--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -20,6 +20,15 @@
   color: #444444;
 }
 
+.programs__list {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @desktop-width) {
+    flex-direction:row;
+  }
+}
+
 .programs__link {
   font-family: "Oswald", sans-serif;
   font-size: 16px;
