--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,9 +1,30 @@
+.advantages {
+  padding: 20px;
+  padding-top: 0;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 30px 45px 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0px 110px 71px 110px;
+  }
+}
+
 .advantages__title {
   font-family: "Oswald", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
+  margin: 0;
+  margin-bottom: 40px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 72px;
+  }
 }
 
 .advantages__description {
@@ -13,15 +34,30 @@
   font-size: 14px;
   line-height: 18px;
   color: #444444;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 57px;
+    width: 204px;
+  }
 }
 
 .advantages__list {
   display: flex;
   flex-direction: column;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  gap: 20px;
+
 
   @media (min-width: @tablet-width) {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto auto;
+    gap: 30px;
+    justify-content: space-between;
   }
 
   @media (min-width: @desktop-width) {
@@ -30,3 +66,55 @@
   }
 }
 
+.advantages__item {
+  display: flex;
+  gap: 20px;
+  flex-shrink: 0;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: column;
+    gap: 30px;
+  }
+}
+
+.advantages__item-image {
+  flex-shrink: 0;
+  display: block;
+  width: 60px;
+  height: 60px;
+
+  @media (min-width: @tablet-width) {
+    width: 80px;
+    height: 80px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .advantages__item-1 {
+    width: 230px;
+    background-image: url("../img/1.png");
+    background-repeat: no-repeat;
+    background-position: 125px 0;
+  }
+
+  .advantages__item-2 {
+    width: 246px;
+    background-image: url("../img/2.png");
+    background-repeat: no-repeat;
+    background-position: 125px 0;
+  }
+
+  .advantages__item-3 {
+    width: 247px;
+    background-image: url("../img/3.png");
+    background-repeat: no-repeat;
+    background-position: 125px 0;
+  }
+
+  .advantages__item-4 {
+    width: 249px;
+    background-image: url("../img/4.png");
+    background-repeat: no-repeat;
+    background-position: 125px 0;
+  }
+}
