--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,3 +1,9 @@
+.form {
+  @media (min-width: @desktop-width) {
+    padding: 0 110px;
+  }
+}
+
 .form__name {
   font-style: normal;
   font-weight: 400;
@@ -5,15 +11,112 @@
   line-height: 18px;
   color: #444444;
   text-transform: uppercase;
+  white-space: nowrap;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .form__field {
+  font-family: "Oswald", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
   color: #444444;
   text-transform: uppercase;
+  border: 1px solid #E7E7E7;
+  padding: 14px 0 13px 20px;
+  width: 100%;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+    padding: 11px 0 11px 20px;
+  }
+}
+
+.form__group {
+  border:0 none;
+  margin: 0;
+
+  padding: 0 20px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 70px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0;
+  }
+}
+
+.form__group:nth-child(2) {
+  @media (max-width: @mobile-width-only) {
+    border-top: 1px solid #D9D9D9;
+  }
+}
+
+.form__group-list:last-child {
+  margin-bottom: 24px;
+}
+
+.form__group-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  gap: 14px;
+
+  @media (min-width: @tablet-width) {
+    gap: 20px;
+  }
+}
+
+.form__group-list.contact-details {
+  @media (min-width: @desktop-width) {
+    gap: 78px;
+  }
+}
+
+.form__group-item {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 13px;
+  align-items: center;
+
+  @media (min-width: @tablet-width) {
+    gap: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 100%;
+  }
+}
+
+
+.form__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.form__list-radio {
+  margin: 22px 0 19px 0;
+
+  @media (min-width: @tablet-width) {
+    border: 1px solid #E7E7E7;
+    padding: 30px;
+    margin: 0;
+  }
 }
 
 .form__value {
@@ -23,13 +126,53 @@
   line-height: 18px;
   color: #222222;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .form__title {
-  font-style: normal;
   font-weight: 400;
-  font-size: 24px;
-  line-height: 26px;
+    font-size: 24px;
+    line-height: 1;
+    font-family: "Oswald", "Arial", sans-serif;
+    color: #111111;
+    position: relative;
+    display: inline-block;
+    padding-right: 22px;
+    padding-left: 40px;
+    margin-left: -40px;
+    margin-bottom: 35px;
+    background: #ffffff;
+}
+
+.title-line--width {
+  margin-right: 76px;
+}
+
+.form__title::after{
+  content: "";
+    position: absolute;
+    top: 50%;
+    width: 100vw;
+    height: 3px;
+    margin-top: 2px;
+    background: #68b738;
+    z-index: -1;
+}
+
+.form__title::before{
+  content: "";
+    position: absolute;
+    top: 50%;
+    width: 100vw;
+    height: 3px;
+    margin-top: 2px;
+    background: #68b738;
+    z-index: -1;
+    right: 0;
 }
 
 .form__value-additionally {
@@ -54,6 +197,14 @@
 
   @media (min-width: @desktop-width) {
     flex-direction: row;
+    justify-content: space-between;
+    gap: 80px;
+  }
+}
+
+.form__wrapper .form__group {
+  @media (min-width: @desktop-width) {
+    width: 100%;
   }
 }
 
@@ -78,5 +229,57 @@
   @media (min-width: @desktop-width) {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
   }
 }
+
+.form__text {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  width: 100%;
+  height: 150px;
+}
+
+.form__text-small {
+  margin-bottom: 32px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    margin-top: 15px;
+  }
+}
+
+
+.form-button__wrapper {
+  margin-top: 40px;
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 21px;
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+    margin: 59px 0 72px 71px;
+    flex-direction: row;
+    gap: 64px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 61px 0 82px 0;
+    gap: 84px;
+  }
+}
+
+.form-button__wrapper .button--primary {
+  width: 282px;
+
+  @media (min-width: @desktop-width) {
+    width: 568px;
+  }
+}
+
