--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,3 +1,9 @@
+.contacts {
+  @media (min-width: @desktop-width) {
+    position: relative;
+  }
+}
+
 .contacts__title {
   font-family: "Oswald", sans-serif;
   font-style: normal;
@@ -6,6 +12,18 @@
   line-height: 20px;
   text-transform: uppercase;
   color: #111111;
+  margin: 0;
+  min-width: 139px;
+
+  @media (min-width: @tablet-width) {
+    width: 172px;
+    font-size: 20px;
+    line-height: 26px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 60px 0 0 80px;
+  }
 }
 
 .contacts__address {
@@ -15,9 +33,67 @@
   font-size: 14px;
   line-height: 20px;
   color: #444444;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    width: 160px;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: end;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 60px 80px 0 0;
+  }
+}
+
+.contacts__address--space {
+  @media (min-width: @tablet-width) {
+  padding: 10px;
+  display: block;
+  }
 }
 
 .contacts__text {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  padding:  26px 20px;
+
+  @media (min-width: @tablet-width) {
+    justify-content: space-between;
+    padding:  56px 70px;
+  }
+
+  @media (min-width: @desktop-width) {
+    position: absolute;
+    width: 565px;
+    height: 198px;
+    background-color: #ffffff;
+    margin: 0;
+    top: 95px;
+    left: 110px;
+    padding: 0;
+  }
+}
+
+.contacts__text--gray {
+  background-color: #F2F2F2;
+}
+
+.contacts__map {
+  display: block;
+  border: none;
+  width: 100%;
+  height: 362px;
+
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    height: 400px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 100%;
+    height: 400px;
+  }
 }
