--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -11,17 +11,37 @@
   color: #000000;
 }
 
+.page__body-index {
+  @media (min-width: @desktop-width) {
+    background-image: url("../img//backgroud-desktop.jpg");
+    background-repeat: no-repeat;
+    background-position: right top;
+  }
+}
+
 .button {
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
   box-sizing: border-box;
   border: none;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .button--primary {
+  display: block;
+  text-align: center;
   background-color: #68b738;
   color: #ffffff;
+
+  @media (max-width: @mobile-width-only) {
+    padding: 11px 44px;
+  }
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
 
 .visually-hidden {
