--- a/source/less/blocks/selection.less
+++ b/source/less/blocks/selection.less
@@ -7,6 +7,17 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
+  margin: 27px 20px 37px 20px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin: 64px 0 54px 69px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 73px 0 56px 110px;
+  }
 }
 
 .section_description {
@@ -15,4 +26,19 @@
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 39px;
+  margin-right: 30px;
+  margin-left: 20px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0 0 66px 70px;
+    max-width: 323px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 0 66px 110px;
+  }
 }
