--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -34,17 +34,17 @@
 
 .additional__title::after{
   content: "";
-    position: absolute;
-    top: 20%;
-    width: 100vw;
-    height: 3px;
-    margin-top: 2px;
-    background: #68b738;
-    z-index: -1;
+  position: absolute;
+  top: 20%;
+  width: 100vw;
+  height: 3px;
+  margin-top: 2px;
+  background: #68b738;
+  z-index: -1;
 
-    @media (min-width: @tablet-width) {
-      top: 50%;
-    }
+  @media (min-width: @tablet-width) {
+    top: 50%;
+  }
 }
 
 .additional__title::before{
@@ -62,7 +62,7 @@
 }
 
 .additional__item {
-  border-bottom: 1px solid #D9D9D9;
+  border-bottom: 1px solid #d9d9d9;
   position: relative;
 }
 
@@ -95,7 +95,7 @@
 
   @media (min-width: @desktop-width) {
     border: none;
-    border-bottom: 1px solid #D9D9D9;
+    border-bottom: 1px solid #d9d9d9;
     padding: 15px 0 17px 0;
     align-items: baseline;
   }
@@ -146,7 +146,7 @@
 }
 
 .additional__item:first-child {
-  border-top: 1px solid #CDCDCD;
+  border-top: 1px solid #cdcdcd;
 }
 
 .additional__item .card__order {
