--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -88,7 +88,7 @@
     width: auto;
     height: auto;
     align-items: baseline;
-    border: 1px solid #CDCDCD;
+    border: 1px solid #cdcdcd;
     padding: 26px 38px 28px 38px;
     max-width: 100%;
   }
