--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -32,7 +32,7 @@
   }
 }
 
-.additional__title::after{
+.additional__title::after {
   content: "";
   position: absolute;
   top: 20%;
@@ -47,7 +47,7 @@
   }
 }
 
-.additional__title::before{
+.additional__title::before {
   @media (min-width: @tablet-width) {
     content: "";
     position: absolute;
@@ -160,6 +160,7 @@
 
   @media (min-width: @desktop-width) {
     flex: 0;
+    padding: 9px 92px;
   }
 }
 
