--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -6,7 +6,7 @@
 
   @media (min-width: @tablet-width) {
     height: 430px;
-    background: #F2F2F2;
+    background: #f2f2f2;
     padding: 0;
     max-width: 324px;
   }
@@ -39,7 +39,7 @@
   }
 }
 
-.card__table{
+.card__table {
   font-family: "Lato", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -68,7 +68,6 @@
 }
 
 .card__image--mobile {
-
   @media (min-width: @tablet-width) {
     display: none;
   }
@@ -85,8 +84,8 @@
   height: 172px;
 
   @media (min-width: @tablet-width) {
-  position: absolute;
-  top: -45px
+    position: absolute;
+    top: -45px;
   }
 }
 
@@ -102,7 +101,7 @@
 
   @media (min-width: @tablet-width) {
     position: absolute;
-    top: -73px
+    top: -73px;
   }
 }
 
@@ -113,7 +112,7 @@
   border: none;
 
   @media (min-width: @tablet-width) {
-    border-bottom: 1px solid #CDCDCD;
+    border-bottom: 1px solid #cdcdcd;
     width: 250px;
     padding-bottom: 9px;
     padding-top: 7px;
@@ -145,9 +144,9 @@
   display: flex;
   align-items: center;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
   width: 161px;
-  position:absolute;
+  position: absolute;
   top: 187px;
   left: 58px;
 
@@ -165,7 +164,7 @@
 .card__text {
   @media (min-width: @tablet-width) {
     position: absolute;
-    top: 161px
+    top: 161px;
   }
 }
 
@@ -188,5 +187,4 @@
 
 .card__order.button--primary {
   font-size: 16px;
-  padding: 9px 92px;
 }
