--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -12,7 +12,7 @@
 
 .catalog:last-child {
   @media (min-width: @tablet-width) {
-    border: 2px solid #F2F2F2;
+    border: 2px solid #f2f2f2;
     padding: 0;
     margin: 0 30px;
     height: 427px;
@@ -32,7 +32,7 @@
   margin: 27px 0 0 0;
   padding-left: 20px;
   padding-bottom: 41px;
-  border-bottom: 1px solid #D9D9D9;
+  border-bottom: 1px solid #d9d9d9;
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
@@ -43,8 +43,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin: 73px 0 56px 110px;
-    padding-left: 110px;
+    margin: 73px 0 165px 110px;
+    padding: 0;
   }
 }
 
@@ -65,7 +65,7 @@
 }
 
 .catalog__card {
-  border-bottom: 1px solid #D9D9D9;
+  border-bottom: 1px solid #d9d9d9;
   position: relative;
 
   @media (min-width: @tablet-width) {
