--- a/source/less/blocks/card-more.less
+++ b/source/less/blocks/card-more.less
@@ -32,30 +32,30 @@
 
 .card-more__button {
   color: #444444;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   padding: 10px 0;
   width: 100%;
 }
 
 .card-more__plus {
   display: inline-block;
-    width: 30px;
-    height: 30px;
-    background: linear-gradient(#D3D3D3, #D3D3D3), linear-gradient(#D3D3D3, #D3D3D3);
-    background-position: center;
-    background-size: 100% 2px,2px 100%;
-    background-repeat: no-repeat;
+  width: 30px;
+  height: 30px;
+  background: linear-gradient(#d3d3d3, #d3d3d3), linear-gradient(#d3d3d3, #d3d3d3);
+  background-position: center;
+  background-size: 100% 2px, 2px 100%;
+  background-repeat: no-repeat;
 
-    @media (min-width: @tablet-width) {
-      width: 60px;
-      height: 60px;
-      margin-bottom: 49px;
-    }
+  @media (min-width: @tablet-width) {
+    width: 60px;
+    height: 60px;
+    margin-bottom: 49px;
+  }
 }
 
 .card-more {
   text-align: center;
-  border-bottom: 1px solid #D9D9D9;
+  border-bottom: 1px solid #d9d9d9;
 }
 
 .card-more__wrapper {
