--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -49,8 +49,8 @@
 
 .contacts__address--space {
   @media (min-width: @tablet-width) {
-  padding: 10px;
-  display: block;
+    padding: 10px;
+    display: block;
   }
 }
 
@@ -58,11 +58,11 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding:  26px 20px;
+  padding: 26px 20px;
 
   @media (min-width: @tablet-width) {
     justify-content: space-between;
-    padding:  56px 70px;
+    padding: 56px 70px;
   }
 
   @media (min-width: @desktop-width) {
@@ -78,7 +78,7 @@
 }
 
 .contacts__text--gray {
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
 }
 
 .contacts__map {
