--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -1,5 +1,5 @@
 .example {
-  background-color: #EAEAEA;
+  background-color: #eaeaea;
   padding: 25px 20px 40px 20px;
 
   @media (min-width: @tablet-width) {
@@ -93,7 +93,7 @@
   width: 77px;
   padding-left: 5px;
   padding-right: 5px;
-  background: #EAEAEA;
+  background: #eaeaea;
 
   @media (min-width: @tablet-width) {
     font-size: 14px;
@@ -152,7 +152,7 @@
 .example__item {
   display: flex;
   flex-direction: column;
-  border: 1px solid #CDCDCD;
+  border: 1px solid #cdcdcd;
   border-radius: 3px;
   width: 124px;
   padding-top: 14px;
