--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -1,5 +1,5 @@
 .main-footer__wrapper {
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,13 +19,13 @@
   margin: 40px 0 20px 0;
 
   @media (min-width: @tablet-width) {
-    margin:0
+    margin: 0;
   }
 }
 
 .main-footer__contacts {
   @media (min-width: @tablet-width) {
-    background: #F2F2F2;
+    background: #f2f2f2;
   }
 }
 
@@ -57,9 +57,9 @@
 .main-footer__underline {
   display: block;
   margin: 23px 20px 19px 20px;
-  height: 0px;
+  height: 0;
   width: 87.5%;
-  border: 1px solid #D9D9D9;
+  border: 1px solid #d9d9d9;
 
   @media (min-width: @tablet-width) {
     display: none;
