--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -6,7 +6,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 0px 110px 71px 110px;
+    padding: 0 110px 71px 110px;
   }
 }
 
@@ -51,15 +51,15 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0px 61px 27px 52px;
+    margin: 0 61px 27px 52px;
   }
 }
 
 .programs__underline {
   display: block;
   margin: 23px 20px 19px 20px;
-  height: 0px;
-  border: 1px solid #D9D9D9;
+  height: 0;
+  border: 1px solid #d9d9d9;
 
   @media (min-width: @tablet-width) {
     display: none;
@@ -79,7 +79,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    flex-direction:row;
+    flex-direction: row;
     gap: 80px;
   }
 }
@@ -101,7 +101,7 @@
 }
 
 .programs__item {
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   position: relative;
 
   @media (max-width: @mobile-width-only) {
@@ -122,7 +122,7 @@
 }
 
 .programs__item-image--weight-loss {
-  top:24px;
+  top: 24px;
   left: 22px;
   width: 50px;
   height: 53px;
@@ -136,7 +136,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    top:41px;
+    top: 41px;
     left: 52px;
     right: auto;
     width: 100px;
@@ -159,7 +159,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    top:47px;
+    top: 47px;
     left: 33px;
     right: auto;
     width: 134px;
