--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -10,7 +10,7 @@
 
   @media (min-width: @tablet-width) {
     color: #000000;
-    background-image:none;
+    background-image: none;
   }
 }
 
@@ -42,7 +42,6 @@
 
 
 .promo__wrapper {
-
   @media (max-width: @mobile-width-only) {
     padding-left: 20px;
     padding-right: 20px;
@@ -77,11 +76,11 @@
 
 @media (max-width: @mobile-width-only) {
   .promo__image {
-  position: absolute;
-  top: 167px;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
+    position: absolute;
+    top: 167px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
   }
 }
 
@@ -94,10 +93,12 @@
     position: absolute;
     top: 346px;
     left: 121px;
+    padding: 14px 26px;
   }
 
   @media (min-width: @desktop-width) {
     left: 190px;
+    padding: 14px 26px;
   }
 }
 
