--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -56,33 +56,17 @@
   }
 }
 
-.header__logo--mobile {
+.header__logo-image {
   padding: 10px 20px;
 
   @media (min-width: @tablet-width) {
-    display: none;
+    display: block;
+    padding: 0 0 0 31px;
   }
-}
-
-.header__logo--desktop {
-  display: none;
 
   @media (min-width: @desktop-width) {
     display: block;
     padding: 53px 0 0 110px;
-  }
-}
-
-.header__logo--tablet {
-  display: none;
-
-  @media (min-width: @tablet-width) {
-    display: block;
-    padding-left: 31px;
-  }
-
-  @media (min-width: @desktop-width) {
-    display: none;
   }
 }
 
