--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -7,6 +7,10 @@
   background-size: 100% 320px;
   background-repeat: no-repeat;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/promo-background@2x.png");
+    background-size: auto 320px;
+  }
 
   @media (min-width: @tablet-width) {
     color: #000000;
@@ -74,13 +78,27 @@
   }
 }
 
-@media (max-width: @mobile-width-only) {
-  .promo__image {
+.promo__image {
+  position: absolute;
+  top: 167px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    position: relative;
+    top: 0;
+    display: block;
+    margin: auto;
+    margin-top: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: block;
     position: absolute;
-    top: 167px;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
+    top: 32px;
+    left: 558px;
+    margin: 0;
   }
 }
 
@@ -91,7 +109,7 @@
 
   @media (min-width: @tablet-width) {
     position: absolute;
-    top: 346px;
+    top: 295px;
     left: 121px;
     padding: 14px 26px;
   }
@@ -99,38 +117,6 @@
   @media (min-width: @desktop-width) {
     left: 190px;
     padding: 14px 26px;
-  }
-}
-
-.promo__image--mobile {
-  padding: 10px 20px;
-
-  @media (min-width: @tablet-width) {
-    display: none;
-  }
-}
-
-.promo__image--desktop {
-  display: none;
-
-  @media (min-width: @desktop-width) {
-    display: block;
-    position: absolute;
-    top: 32px;
-    left: 558px;
-  }
-}
-
-.promo__image--tablet {
-  display: none;
-
-  @media (min-width: @tablet-width) {
-    display: block;
-    margin: auto;
-    margin-top: 20px;
-  }
-
-  @media (min-width: @desktop-width) {
-    display: none;
+    top: 350px;
   }
 }
